@@ -26,5 +26,4 @@ MONGODB_DEFAULT_MONGODUMP = "mongodump"
 MONGODB_DEFAULT_OUTPUT_DIR = "/tmp/{pkg_name}".format(pkg_name=PKG_NAME)
 MONGODB_DEFAULT_USER = PKG_NAME
 MONGODB_DEFAULT_PWD = "pass"
-MONGODB_DEFAULT_HOST = "localhost"
 MONGODB_DEFAULT_PORT = 27017
