@@ -1,6 +1,7 @@
 Version 0.2.0:
 ------------
 + For each mongodump, a random UUID is appended to the output directory in order to avoid name collisions
++ One config to rule them all: one config file can handle several hosts and their databases
 + Option: Dry run mode -> doesn't do a thing (--dry-run or -d)
 + Option: Log to stdout (-s or --stdout)
 + Option: set log level (--ll or --log-level)
